tests/snapshots/conformance__n_object_comma_instead_of_colon.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{"x", null}
stdout --- 
<empty>
stderr --- 
error: expected colon after key, found `,`
 --> stdin:1:5
  |
1 | {"x", null}
  |  ---^
  |  |
  |  expected due to `"x"`
  |
help: insert colon and placeholder key
  |
1 | {"x": "🐟🛹", null}
  |     ++++++++
