tests/snapshots/conformance__n_object_several_trailing_commas.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{"id":0,,,,,}
stdout --- 
<empty>
stderr --- 
error: expected key, found `,`
 --> stdin:1:9
  |
1 | {"id":0,,,,,}
  |        -^
  |        |
  |        expected due to `,`
  |
help: consider removing the trailing comma
  |
1 - {"id":0,,,,,}
1 + {"id":0,,,,}
  |
